--- a/admin/languages.yaml
+++ b/admin/languages.yaml
@@ -2140,20 +2140,20 @@ ru:
     LOGIN_BTN: "Логин"
     LOGIN_BTN_FORGOT: "Забыл"
     LOGIN_BTN_RESET: "Востановить Пароль"
-    LOGIN_BTN_SEND_INSTRUCTIONS: "Отправить Инструкции Востановлению"
+    LOGIN_BTN_SEND_INSTRUCTIONS: "Отправить инструкции по сбросу"
     LOGIN_LOGGED_IN: "Вы успешно вошли в систему"
     LOGIN_FAILED: "Ошибка при входе"
     LOGGED_OUT: "Вы вышли"
-    RESET_LINK_EXPIRED: "Время соединения истекло, пожалуйста попробуйте еще раз"
+    RESET_LINK_EXPIRED: "Время соединения истекло, пожалуйста, попробуйте еще раз"
     RESET_PASSWORD_RESET: "Пароль был сброшен"
     RESET_INVALID_LINK: "Неверная ссылка восстановления пароля, пожалуйста, попробуйте еще раз"
     FORGOT_INSTRUCTIONS_SENT_VIA_EMAIL: "Инструкции для восстановления пароля были высланы на адрес электронной почты %s"
-    FORGOT_FAILED_TO_EMAIL: "Не удалось отпроавить инструкции по электронной почте, пожалуйста, повторите попытку позже"
-    FORGOT_CANNOT_RESET_EMAIL_NO_EMAIL: "Вы не можете сбросить пароль %s, адрес электронной почты не существует"
+    FORGOT_FAILED_TO_EMAIL: "Не удалось отправить инструкции по электронной почте, пожалуйста, повторите попытку позже"
+    FORGOT_CANNOT_RESET_EMAIL_NO_EMAIL: "Невозможно сбросить пароль для %s, так как адрес электронной почты не установлен"
     FORGOT_USERNAME_DOES_NOT_EXIST: "Пользователь с логином <b>%s</b> не существует"
-    FORGOT_EMAIL_NOT_CONFIGURED: "Не могу сбросить пароль. Сайт не настроен для отправки электронной почты"
-    FORGOT_EMAIL_SUBJECT: "%s Запрос на восстановление пароля Пароля"
-    FORGOT_EMAIL_BODY: "<h1>Восстановление пароля</h1><p>Уважемый %1$s,</p><p>A request was made on <b>%4$s</b> to reset your password.</p><p><br /><a href=\"%2$s\" class=\"btn-primary\">Click this to reset your password</a><br /><br /></p><p>Alternatively, copy the following URL into your browser's address bar:</p> <p>%2$s</p><p><br />Kind regards,<br /><br />%3$s</p>"
+    FORGOT_EMAIL_NOT_CONFIGURED: "Не удаётся сбросить пароль. Этот сайт не настроен для отправки электронной почты"
+    FORGOT_EMAIL_SUBJECT: "%s Запрос на восстановление пароля"
+    FORGOT_EMAIL_BODY: "<h1>Восстановление пароля</h1><p>Уважемый %1$s,</p><p>Было отправлен запрос на <b>%4$s</b> для сброса пароля.</p><p><br /><a href=\"%2$s\" class=\"btn-primary\">Нажмите эту кнопку, чтобы сбросить свой пароль</a><br /><br /></p><p>Или скопируйте следующий URL в адресную строку вашего браузера:</p> <p>%2$s</p><p><br />С уважением,<br /><br />%3$s</p>"
     MANAGE_PAGES: "Менеджер Страниц"
     CONFIGURATION: "Настройки"
     PAGES: "Страницы"
@@ -2187,7 +2187,7 @@ ru:
     BY: "От"
     UPDATE_THEME: "Обновление Темы"
     UPDATE_PLUGIN: "Обновление Плагина"
-    OF_THIS_THEME_IS_NOW_AVAILABLE: "эта тема теперь доступена"
+    OF_THIS_THEME_IS_NOW_AVAILABLE: "эта тема теперь доступна"
     OF_THIS_PLUGIN_IS_NOW_AVAILABLE: "этот плагин теперь доступен"
     AUTHOR: "Автор"
     HOMEPAGE: "Сайт"
@@ -2243,8 +2243,8 @@ ru:
     INSTALL: "Установить"
     ACTIVE_THEME: "Активировать Тему"
     SWITCHING_TO: "Переключить"
-    SWITCHING_TO_DESCRIPTION: "Переключившись на другую тему, нет никакой гарантии, что все страницы поддерживаются, возможно это приведет к ошибкам при попытке загрузить страницу."
-    SWITCHING_TO_CONFIRMATION: "Вы действительно хотите переключить и перейти к теме"
+    SWITCHING_TO_DESCRIPTION: "При переключении на другую тему нет никакой гарантии того, что поддерживаются все страницы макетов. Возможно, это приведет к ошибкам при попытке загрузки указанных страниц."
+    SWITCHING_TO_CONFIRMATION: "Вы действительно хотите продолжить и перейти к теме"
     CREATE_NEW_USER: "Создать Нового Пользователя"
     REMOVE_USER: "Удалить Пользователя"
     ACCESS_DENIED: "Доступ запрещен"
