--- a/admin/languages.yaml
+++ b/admin/languages.yaml
@@ -2567,3 +2567,5 @@ ru:
     PLUGIN_STATUS: "Статус плагина"
     INCLUDE_DEFAULT_LANG: "Включить язык по умочанию"
     INCLUDE_DEFAULT_LANG_HELP: "Это позволит добавить все URL-адреса по умолчанию, язык по умолчанию. Например, `/en/blog/my-post`"
+    ALLOW_URL_TAXONOMY_FILTERS: "URL для фильтров таксономии"
+    ALLOW_URL_TAXONOMY_FILTERS_HELP: "Базовая страница для фильтров`/taxonomy:value`."
