обновление языковых переменных

--- a/admin/languages.yaml
+++ b/admin/languages.yaml
@@ -2546,7 +2546,7 @@ ru:
     USERNAME_HELP: "Имя пользователя должно быть от 3 до 16 символов, в том числе строчных букв, цифр, подчеркивания и дефиса. Прописные буквы, пробелы и специальные символы не допускаются"
     FULLY_UPDATED: "Полностью Обновлено"
     SAVE_LOCATION: "Сохранить расположение"
-    PAGE_FILE: "Файл страницы"
+    PAGE_FILE: "Шаблон страницы"
     PAGE_FILE_HELP: "Тип отображения страницы, по умолчанию шаблон отображения для этой страницы"
     NO_USER_ACCOUNTS: "Учетные записи не найдены, пожалуйста создайте первую запись..."
     REDIRECT_TRAILING_SLASH: "Перенаправление замыкающей слэш"
@@ -2569,3 +2569,7 @@ ru:
     INCLUDE_DEFAULT_LANG_HELP: "Это позволит добавить все URL-адреса по умолчанию, язык по умолчанию. Например, `/en/blog/my-post`"
     ALLOW_URL_TAXONOMY_FILTERS: "URL для фильтров таксономии"
     ALLOW_URL_TAXONOMY_FILTERS_HELP: "Базовая страница для фильтров`/taxonomy:value`."
+    REDIRECT_DEFAULT_CODE: "Перенаправление по умолчанию"
+    REDIRECT_DEFAULT_CODE_HELP: "Статус заголовка HTTP при перенаправлении URL"
+    IGNORE_HIDDEN: "Игнорировать скрытые"
+    IGNORE_HIDDEN_HELP: "Игнорировать все скрытые файлы и папки"
